--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,24 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: ghostwhite;
+    margin: 0;
+}
+
+.home-wrapper {
+    height: 100vh;
+    background-color: cadetblue;
+}
+
+.player-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40%;
+    width: 100px;
+    background-color: bisque;
+    position: absolute;
+    bottom: 0;
 }
