--- a/client/style.css
+++ b/client/style.css
@@ -5,6 +5,9 @@
 body {
     background-color: ghostwhite;
     margin: 0;
+}
+
+.overflow-body {
     overflow: hidden;
 }
 
@@ -29,7 +32,38 @@ body {
 }
 
 .hamburger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     color: white;
+    z-index: 1000;
+}
+
+.ig-linkedIn-icons {
+    height: 50px;
+    width: 50px;
+    opacity: 0.5;
+    cursor: pointer;
+    margin-top: 50px;
+}
+.hamburger div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hamburger p {
+    font-family: "Oswald", sans-serif;
+    color: white;
+    font-size: 40px;
+    margin: 0;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.hamburger p:hover {
+    color: rgba(0, 221, 255, 0.6);
 }
 
 .hamburger-icon {
@@ -37,6 +71,14 @@ body {
     left: 20px;
     top: 40px;
     z-index: 101;
+}
+
+.github-link {
+    width: 32px;
+    height: 32px;
+    margin-left: 10px;
+    margin-top: 50px;
+    opacity: 0.5;
 }
 
 #menu_checkbox {
@@ -60,7 +102,7 @@ label {
 label div {
     width: 6px;
     height: 6px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
     margin-left: 0;
     margin-bottom: 6px;
     border-radius: 4px;
@@ -92,6 +134,14 @@ label div:last-child {
     background-color: #ffc107;
 }
 
+.icon-navbar {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* --- PAGE 1  --- */
 
 .name-job-wrapper {
@@ -99,6 +149,7 @@ label div:last-child {
     align-items: flex-end;
     justify-content: flex-end;
     flex-direction: column;
+    margin-right: 40px;
 }
 
 .page1 {
@@ -111,26 +162,17 @@ label div:last-child {
 
 .page1 h1 {
     font-family: "Oswald", sans-serif;
-    color: white;
+    color: rgba(255, 255, 255, 0.9);
     margin: 0;
     font-size: 150px;
     font-weight: 700;
-}
-
-.page1 h2 {
-    color: white;
-    font-size: 30px;
-}
-.page1 h2:hover {
-    color: blue;
-    animation: bounce 1s;
 }
 
 .page1 h3 {
     font-family: "Oswald", sans-serif;
     margin: -30px 30px 0 0;
     font-size: 30px;
-    color: white;
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .page1 span {
@@ -139,9 +181,11 @@ label div:last-child {
 }
 
 .page1 span:hover {
-    color: rgba(0, 255, 247, 0.6);
+    color: rgba(0, 221, 255, 0.6);
     animation: bounce 1s ease-in-out;
 }
+
+/* PAGE 2 */
 
 .page2 {
     height: 100%;
@@ -150,13 +194,6 @@ label div:last-child {
     align-items: flex-end;
     justify-content: center;
     background-color: black;
-}
-.page3 {
-    height: 100%;
-    width: 100vw;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
 }
 
 .player-wrapper {
@@ -182,6 +219,71 @@ label div:last-child {
     background-color: aqua;
     height: 100%;
     width: 100%;
+}
+
+/* PAGE 3 */
+
+.page3 {
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    background-color: black;
+}
+
+/* PROJECTS */
+
+.projects-page-wrapper {
+    overflow: scroll !important;
+}
+
+/* Blitz Draw on Projects Page */
+.projects-wrapper {
+    height: 100vh;
+    width: 100%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-info {
+    color: white;
+    display: flex;
+    width: 40%;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-left: 30px;
+}
+
+.projects-wrapper img {
+    object-fit: cover;
+    height: 400px;
+    width: 50%;
+}
+
+.page-projects-wrapper {
+    height: 80vh;
+}
+
+.back-button-projects {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid white;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    top: 10px;
+    font-size: 20px;
+    font-weight: bolder;
+    left: 10px;
+    z-index: 1;
+    cursor: pointer;
 }
 
 /* ANIMATIONS */
