--- a/client/style.css
+++ b/client/style.css
@@ -15,7 +15,7 @@ html {
 
 .home-wrapper {
     height: 100vh;
-    width: 400vw;
+    width: 500vw;
     position: absolute;
     transition: 0.5s all;
     display: flex;
@@ -50,6 +50,11 @@ html {
     opacity: 0.5;
     cursor: pointer;
     margin-top: 50px;
+}
+
+.github-icon {
+    height: 45px;
+    width: 45px;
 }
 .hamburger div {
     display: flex;
@@ -214,7 +219,7 @@ label div:last-child {
 }
 
 .blitzdraw-wrapper li {
-    font-family: helvetica;
+    font-family: "Noto Sans Display", sans-serif;
     font-size: 15px;
     color: white;
 }
@@ -223,12 +228,13 @@ label div:last-child {
     display: flex;
     flex-direction: column;
     width: 30%;
+    text-align: justify;
 }
 
 .page2-description p {
     color: white;
     font-size: 18px;
-    font-family: helvetica;
+    font-family: "Noto Sans Display", sans-serif;
 }
 
 /* PLAYER */
@@ -277,12 +283,13 @@ label div:last-child {
     display: flex;
     flex-direction: column;
     width: 30%;
+    text-align: justify;
 }
 
 .page3-description p {
     color: white;
     font-size: 18px;
-    font-family: helvetica;
+    font-family: "Noto Sans Display", sans-serif;
 }
 
 /* PAGE 4 */
@@ -295,6 +302,32 @@ label div:last-child {
     align-items: flex-start;
     justify-content: center;
     border-right: 30px solid white;
+}
+
+/* PAGE 5 */
+
+.page5 {
+    height: 100%;
+    width: 100vw;
+    display: flex;
+    background-color: #3d3c42;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.page5 div {
+    color: white;
+    transform: rotate(90deg);
+    font-family: "Noto Sans Display", sans-serif;
+}
+.page5 h1:hover {
+    cursor: pointer;
+    color: rgba(0, 221, 255, 0.6);
+}
+
+.arrows {
+    display: flex;
+    flex-direction: column;
 }
 
 /* PROJECTS */
@@ -311,11 +344,12 @@ label div:last-child {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: justify;
 }
 
 .project-info {
     color: white;
-    font-family: helvetica;
+    font-family: "Noto Sans Display", sans-serif;
     display: flex;
     width: 40%;
     align-items: flex-start;
@@ -450,6 +484,7 @@ label div:last-child {
     }
     .page4-description {
         width: 90vw;
+        text-align: justify;
     }
 
     .projects-wrapper {
